[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art/Board.png" type="Texture" id=1]
[ext_resource path="res://Art/Menu.png" type="Texture" id=2]
[ext_resource path="res://scenes/CurrentInventory.gd" type="Script" id=3]
[ext_resource path="res://scenes/UpgradeManager.gd" type="Script" id=4]
[ext_resource path="res://scenes/Upgrade1.gd" type="Script" id=5]
[ext_resource path="res://scenes/Upgrade2.gd" type="Script" id=6]
[ext_resource path="res://Fonts/PixelFont2.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/Upgrade3.gd" type="Script" id=8]
[ext_resource path="res://Art/Lock.png" type="Texture" id=9]
[ext_resource path="res://Art/Info.png" type="Texture" id=10]
[ext_resource path="res://scenes/Inventory.gd" type="Script" id=11]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.314972
margin_right = -0.314941
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -190.0
margin_right = -10.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
margin_right = 200.0
margin_bottom = 380.0
texture = ExtResource( 2 )

[node name="MoneyDisplay" type="TextureRect" parent="MarginContainer/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.0
margin_top = 15.0
margin_right = 75.0
margin_bottom = 70.0
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentInventory" type="Label" parent="MarginContainer/TextureRect/MoneyDisplay"]
margin_left = 4.0
margin_top = 3.5
margin_right = 147.0
margin_bottom = 51.5
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 7 )
text = "Money: $50
Treasures: 0
Artifacts: 0"
align = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -117.0
margin_right = 87.0
margin_bottom = 147.0
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TextureRect/ScrollContainer"]
margin_right = 150.0
margin_bottom = 374.0
script = ExtResource( 4 )

[node name="Upgrade1" type="TextureButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 50.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 9 )
script = ExtResource( 5 )
upgrade_cost_ratio = 1.2
cost = 25

[node name="Description" type="Label" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -9.0
custom_fonts/font = ExtResource( 7 )
text = "+3 Gold brought back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade1"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -14.0
margin_top = 5.0
margin_right = -4.0
margin_bottom = 10.0
mouse_default_cursor_shape = 16
toggle_mode = true
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade2" type="TextureButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 150.0
margin_bottom = 104.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 9 )
script = ExtResource( 6 )

[node name="TextureButton" type="TextureButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -14.0
margin_top = 5.0
margin_right = -4.00003
margin_bottom = 10.0
mouse_default_cursor_shape = 16
toggle_mode = true
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade2"]
margin_left = 3.0
margin_top = 2.0
margin_right = 142.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 7 )
text = "2000 g "
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade3" type="TextureButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 150.0
margin_bottom = 158.0
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 9 )
script = ExtResource( 8 )

[node name="Description" type="Label" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade3"]
margin_left = 3.0
margin_top = 1.0
margin_right = 147.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade3"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -14.0
margin_top = 5.70352
margin_right = -4.0
margin_bottom = 10.0
mouse_default_cursor_shape = 16
toggle_mode = true
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade4" type="TextureButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 150.0
margin_bottom = 212.0
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 9 )

[node name="Description" type="Label" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade4"]
margin_left = 3.0
margin_top = 1.0
margin_right = 147.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade4"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -14.0
margin_top = 5.70352
margin_right = -4.0
margin_bottom = 10.0
toggle_mode = true
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade5" type="TextureButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 150.0
margin_bottom = 266.0
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 9 )

[node name="Description" type="Label" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade5"]
margin_left = 3.0
margin_top = 1.0
margin_right = 147.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade5"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -14.0
margin_top = 5.70352
margin_right = -4.0
margin_bottom = 10.0
toggle_mode = true
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade6" type="TextureButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 150.0
margin_bottom = 320.0
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 9 )

[node name="Description" type="Label" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade6"]
margin_left = 3.0
margin_top = 1.0
margin_right = 147.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade6"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -14.0
margin_top = 5.70352
margin_right = -4.0
margin_bottom = 10.0
toggle_mode = true
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade7" type="TextureButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer"]
margin_top = 324.0
margin_right = 150.0
margin_bottom = 374.0
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 9 )

[node name="Description" type="Label" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade7"]
margin_left = 3.0
margin_top = 1.0
margin_right = 147.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade7"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -14.0
margin_top = 5.70352
margin_right = -4.0
margin_bottom = 10.0
toggle_mode = true
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="TextureButton" parent="MarginContainer/TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.5
margin_top = -41.0
margin_right = 40.5
margin_bottom = -14.0
texture_normal = ExtResource( 1 )
expand = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/TextureRect/Inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -0.297302
margin_right = 1.0
margin_bottom = -0.297302
custom_fonts/font = ExtResource( 7 )
text = "Inventory"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade1" to="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade1" method="_on_Upgrade1_pressed"]
[connection signal="toggled" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade1/TextureButton" to="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade1" method="_on_TextureButton_toggled"]
[connection signal="pressed" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade2" to="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade2" method="_on_Upgrade2_pressed"]
[connection signal="toggled" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade2/TextureButton" to="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade2" method="_on_TextureButton_toggled"]
[connection signal="pressed" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade3" to="MarginContainer/TextureRect/MoneyDisplay/CurrentInventory" method="_on_Upgrade3_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade3" to="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade3" method="_on_Upgrade3_pressed"]
[connection signal="toggled" from="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade3/TextureButton" to="MarginContainer/TextureRect/ScrollContainer/VBoxContainer/Upgrade3" method="_on_TextureButton_toggled"]
[connection signal="pressed" from="MarginContainer/TextureRect/Inventory" to="MarginContainer/TextureRect/Inventory" method="_on_Inventory_pressed"]
